Windows unhandled exception filter should print stack trace

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.0-rc1
    • Affects Version/s: 2.2.0-rc0
    • Component/s: Logging
    • Environment:
      Windows
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The unhandled exception filter in the Windows version of mongod is not calling printStackTrace(); it really should, so the log file has the information we need to debug access violations.

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: