SERVER-6554 Windows unhandled exception filter print stack trace

Modify the Windows stack trace printing code to accept a "context",
and use the context record passed to the unhandled exception filter
to start the stack trace at the faulting instruction.  Collect the
context used for "normal" stack traces from inside printStackTrace.